# django-cron

./: .gitignore  README.rst  pyproject.toml  settings_base.py  testmanage.py
.github/workflows/: django.yml
demo/demo/: cron.py
django_cron/: admin.py  core.py  enums.py  models.py  tests.py
django_cron/migrations/: 0004_rename_cronjoblog_.py
